@@ -2109,6 +2109,15 @@ fetchPairLong (PAIR_ID pairId, asmop * aop, const iCode * ic, int offset)
               emit2 ("ld %s,a", _pairs[pairId].h);
               regalloc_dry_run_cost += 1;
             }
+          /* The Rabbit's cast to bool is a cheap way of zeroing h (similar to xor a, a for a for the Z80). */
+          else if (pairId == PAIR_HL && IS_RAB && aop->size - offset == 1 && !(aop->type == AOP_REG && (aop->aopu.aop_reg[offset]->rIdx == L_IDX || aop->aopu.aop_reg[offset]->rIdx == H_IDX)))
+            {
+              emit2 ("bool hl");
+              regalloc_dry_run_cost++;
+              if (!regalloc_dry_run)
+                emit2 ("ld %s,%s", _pairs[pairId].l, aopGet (aop, offset, FALSE));
+              regalloc_dry_run_cost += ld_cost (ASMOP_L, aop);
+            }
           else
             {
               if (!regalloc_dry_run)
@@ -7573,7 +7582,7 @@ emitRsh2 (asmop * aop, int size, int is_signed)
 /* shiftR2Left2Result - shift right two bytes from left to result  */
 /*-----------------------------------------------------------------*/
 static void
-shiftR2Left2Result (const iCode * ic, operand * left, int offl, operand * result, int offr, int shCount, int is_signed)
+shiftR2Left2Result (const iCode *ic, operand *left, int offl, operand *result, int offr, int shCount, int is_signed)
 {
   int size = 2;
   symbol *tlbl;
@@ -7606,8 +7615,13 @@ shiftR2Left2Result (const iCode * ic, operand * left, int offl, operand * result
       return;
     }
 
-  movLeft2Result (left, offl, result, offr, 0);
-  movLeft2Result (left, offl + 1, result, offr + 1, 0);
+  if (isPair (AOP (result)) && !offr)
+    fetchPairLong (getPairId (AOP (result)), AOP(left), ic, offl);
+  else
+    {
+      movLeft2Result (left, offl, result, offr, 0);
+      movLeft2Result (left, offl + 1, result, offr + 1, 0);
+    }
 
   if (shCount == 0)
     return;
@@ -7658,12 +7672,14 @@ shiftR2Left2Result (const iCode * ic, operand * left, int offl, operand * result
 /* shiftL2Left2Result - shift left two bytes from left to result   */
 /*-----------------------------------------------------------------*/
 static void
-shiftL2Left2Result (operand * left, int offl, operand * result, int offr, int shCount)
+shiftL2Left2Result (operand *left, int offl, operand *result, int offr, int shCount, const iCode *ic)
 {
   if (sameRegs (AOP (result), AOP (left)) && ((offl + MSB16) == offr))
     {
       wassert (0);
     }
+  else if (isPair (AOP (result)) && !offr)
+    fetchPairLong (getPairId (AOP (result)), AOP(left), ic, offl);
   else
     {
       /* Copy left into result */
@@ -7836,7 +7852,7 @@ shiftL1Left2Result (operand * left, int offl, operand * result, int offr, int sh
 /* genlshTwo - left shift two bytes by known amount                */
 /*-----------------------------------------------------------------*/
 static void
-genlshTwo (operand * result, operand * left, int shCount)
+genlshTwo (operand *result, operand *left, int shCount, const iCode *ic)
 {
   int size = AOP_SIZE (result);
 
@@ -7872,7 +7888,7 @@ genlshTwo (operand * result, operand * left, int shCount)
         }
       else
         {
-          shiftL2Left2Result (left, LSB, result, LSB, shCount);
+          shiftL2Left2Result (left, LSB, result, LSB, shCount, ic);
         }
     }
 }
@@ -7890,7 +7906,7 @@ genlshOne (operand * result, operand * left, int shCount)
 /* genLeftShiftLiteral - left shifting by known count              */
 /*-----------------------------------------------------------------*/
 static void
-genLeftShiftLiteral (operand * left, operand * right, operand * result, const iCode * ic)
+genLeftShiftLiteral (operand * left, operand * right, operand * result, const iCode *ic)
 {
   int shCount = (int) ulFromVal (AOP (right)->aopu.aop_lit);
   int size;
@@ -7917,7 +7933,7 @@ genLeftShiftLiteral (operand * left, operand * right, operand * result, const iC
           genlshOne (result, left, shCount);
           break;
         case 2:
-          genlshTwo (result, left, shCount);
+          genlshTwo (result, left, shCount, ic);
           break;
         case 4:
           wassertl (0, "Shifting of longs is currently unsupported");
